fixed footer social icons alignment issue

--- a/styles/components/footer/footer.scss
+++ b/styles/components/footer/footer.scss
@@ -29,6 +29,7 @@ footer {
 		.footer__social {
 			display: flex;
 			justify-content: center;
+			align-items: center;
 
 			img:nth-child(2) {
 				margin-inline: 1.5rem;
